# time-parser

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python.yml  rust.yml
lib/time-parser/: Cargo.toml
lib/time-parser-py/: Cargo.toml  pyproject.toml
lib/time-parser-py/benches/: benchmark_regex.py  benchmark_time_parser.py  parse_timedelta.py
lib/time-parser-py/src/: lib.rs
lib/time-parser-py/tests/: test_parse_timedelta.py  test_timedelta_to_string.py
lib/time-parser/benches/: README.md  bench_pest.rs  bench_regex.rs  durations_regex.rs
lib/time-parser/src/: constants.rs  duration_formatter.rs  durations.rs  error.rs  lib.rs
lib/time-parser/src/grammars/: intervals.pest
