[workspace]
members = ["lib/time-parser", "lib/time-parser-py"]
resolver = "2"

[workspace.dependencies]
chrono = "0.4.39"
criterion = "0.5.1"
pest = { version = "2.7.15" }
pest_derive = { version = "2.7.15" }
regex = { version = "1.11.1" }
rstest = "0.24.0"
thiserror = "1.0.30"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
