[package]
name = "time-parser"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bench_pest"
harness = false

[[bench]]
name = "bench_regex"
harness = false

[dependencies]
chrono.workspace = true
pest.workspace = true
pest_derive.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
rstest.workspace = true
tracing-subscriber.workspace = true
regex.workspace = true
once_cell = "1.20.2"
